# lion-engine

./: .gitignore  AnimatedSpriteComponent_8hpp_source.html  AnimatedSpriteSystem_8hpp_source.html  AsioNetworkModule_8hpp_source.html  AssetLoader_8hpp_source.html  AssetManager_8hpp_source.html  Asset_8hpp_source.html  BoxComponent_8hpp_source.html  Broker_8hpp_source.html  CMakeLists.txt  ClientBroker_8hpp_source.html  Client_8hpp_source.html  Clock_8hpp.html  Clock_8hpp_source.html  CollisionSystem_8hpp_source.html  Color_8hpp_source.html  ComponentManager_8hpp_source.html  Device_8hpp_source.html  Doxyfile  Ecs_8hpp_source.html  EntityManager_8hpp_source.html  Error_8hpp_source.html  GUIDE.md  GraphicalLib_8hpp_source.html  HealthComponent_8hpp_source.html  HitBoxComponent_8hpp_source.html  HurtBoxComponent_8hpp_source.html  IButton_8hpp_source.html  ICameraComponent_8hpp_source.html  ICameraSystem_8hpp_source.html  IClient_8hpp.html  IClient_8hpp_source.html  IComponent_8hpp_source.html  IContainer_8hpp_source.html  IEngine_8hpp_source.html  IError_8hpp_source.html  IEventManager_8hpp_source.html  IFont_8hpp_source.html  IGame_8hpp_source.html  IInteractable_8hpp_source.html  (+604 more)
.github/workflows/: cmake-multi-platform.yml
documentation/: Sound.md
documentation/GUI/: Button.md  Component.md  Container.md  Interactable.md  Text.md  TextField.md
include/: Asset.hpp  ClientCoreModule.hpp  Clock.hpp  CoreModule.hpp  Error.hpp  GraphicalLib.hpp  LoaderLib.hpp  LogDef.hpp  Logger.hpp  NetworkLoaderLib.hpp  PackUnpack.hpp  ResolvingLib.hpp  ResponsibilityChain.hpp  Scene.hpp  SceneManager.hpp  ServerCoreModule.hpp  Utils.hpp  Window.hpp  common.hpp  dllDefine.hpp  etibjson.hpp  globalLogger.hpp
include/ECS/: ComponentManager.hpp  Ecs.hpp  EntityManager.hpp  SystemManager.hpp  common.hpp
include/ECS/Components/: AnimatedSpriteComponent.hpp  BoxComponent.hpp  HealthComponent.hpp  HitBoxComponent.hpp  HurtBoxComponent.hpp  MotionComponent.hpp  PatternComponent.hpp  ShootPatternComponent.hpp  TransformComponent.hpp
include/ECS/Systems/: AnimatedSpriteSystem.hpp  CollisionSystem.hpp  ICameraSystem.hpp  IRender2DSystem.hpp  MoveSystem.hpp  PatternSystem.hpp  ShootPatternSystem.hpp
include/Interface/: Drawable.hpp  Transformable.hpp
include/Maths/: Matrix.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/SFML/: SFMLText.hpp  SFMLWindow.hpp
include/Sound/: Device.hpp  Playlist.hpp  Sound.hpp
include/interface/: Color.hpp  ICameraComponent.hpp  IColor.hpp  IEngine.hpp  IError.hpp  IEventManager.hpp  IFont.hpp  IGame.hpp  IModelComponent.hpp  IRectangle.hpp  IShader.hpp  IShape.hpp  ISpriteComponent.hpp  IText.hpp  ITriangle.hpp  IWindow.hpp
include/interface/GUI/: IButton.hpp  IComponent.hpp  IContainer.hpp  IInteractable.hpp  IManager.hpp  IText.hpp  ITextField.hpp
include/interface/ICoreModule/: ICoreModule.hpp
include/interface/ILogger/: ILogger.hpp
include/interface/INetworkModule/: ISession.hpp  SessionManager.hpp
include/luacpp/: func_utils.h  lua_52_53.h  lua_class.h  lua_function.h  lua_ref_object.h  lua_state.h  lua_table.h
include/message/: Broker.hpp  ClientBroker.hpp  Message.hpp  MessageBuilder.hpp  ServerBroker.hpp  Topic.hpp
lib/ClientCoreModule/: CMakeLists.txt
lib/ClientCoreModule/include/: ClientCoreModule.hpp
lib/ClientCoreModule/src/: ClientCoreModule.cpp
lib/NetworkModule/: CMakeLists.txt
lib/NetworkModule/include/: Client.hpp  ListenerUDP.hpp  Session.hpp
lib/NetworkModule/src/: Client.cpp  ListenerUDP.cpp  Session.cpp
lib/SFML/: CMakeLists.txt
lib/SFML/dependencies/SFML-2.6.1/: CMakeLists.txt
lib/SFML/dependencies/SFML-2.6.1/src/SFML/Audio/: CMakeLists.txt
lib/SFML/include/: SFMLCameraComponent.hpp  SFMLCommon.hpp  SFMLEngine.hpp  SFMLEventManager.hpp  SFMLFont.hpp  SFMLKeys.hpp  SFMLRectangle.hpp  SFMLSpriteComponent.hpp  SFMLText.hpp  SFMLTriangle.hpp  SFMLWindow.hpp
lib/SFML/include/ECS/Systems/: SFMLCameraSystem.hpp  SFMLRender2DSystem.hpp
lib/SFML/include/GUI/: SFMLButton.hpp  SFMLContainer.hpp  SFMLManager.hpp  SFMLText.hpp  SFMLTextField.hpp
lib/SFML/src/: SFMLCameraComponent.cpp  SFMLEngine.cpp  SFMLEventManager.cpp  SFMLFont.cpp  SFMLKeys.cpp  SFMLRectangle.cpp  SFMLSpriteComponent.cpp  SFMLText.cpp  SFMLTriangle.cpp  SFMLWindow.cpp
lib/SFML/src/ECS/System/: SFMLCameraSystem.cpp  SFMLRender2DSystem.cpp  SFMLRender2DSytem.cpp
lib/SFML/src/GUI/: SFMLButton.cpp  SFMLContainer.cpp  SFMLManager.cpp  SFMLText.cpp  SFMLTextField.cpp
lib/ServerCoreModule/: CMakeLists.txt
lib/ServerCoreModule/include/: ServerCoreModule.hpp
lib/ServerCoreModule/src/: ServerCoreModule.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+57 more)
src/: ClientCoreModule.cpp  CoreModule.cpp  GraphicalLib.cpp  LoaderLib.cpp  NetworkLoaderLib.cpp  ResolvingLib.cpp  Scene.cpp  SceneManager.cpp  ServerCoreModule.cpp  Utils.cpp  Window.cpp  compression.cpp
src/ECS/: Ecs.cpp  EntityManager.cpp
src/ECS/Components/: AnimatedSpriteComponent.cpp
src/ECS/Systems/: AnimatedSpriteSystem.cpp  CollisionSystem.cpp  MoveSystem.cpp  PatternSystem.cpp  ShootPatternSystem.cpp
src/SFML/: SFMLFont.cpp  SFMLWindow.cpp
src/Sound/: Device.cpp  Sound.cpp
src/interface/: Color.cpp  IColor.cpp  IEngine.cpp  IEventManager.cpp  IFont.cpp  IRectangle.cpp  IShape.cpp  IText.cpp  ITriangle.cpp
src/interface/GUI/: IButton.cpp  IComponent.cpp  IContainer.cpp  IInteractable.cpp  IManager.cpp  ITextField.cpp
src/luacpp/: func_utils.cpp  lua_object.cpp  lua_state.cpp  lua_table.cpp
src/message/: Broker.cpp  ClientBroker.cpp  Message.cpp  ServerBroker.cpp  Topic.cpp
